--- a/package.json
+++ b/package.json
@@ -16,11 +16,26 @@
     "url": "https://github.com/sasha-arrabi/boondoggle-api/issues"
   },
   "homepage": "https://github.com/sasha-arrabi/boondoggle-api#readme",
+  "dependencies": {
+    "@nestjs/common": "^7.0.5",
+    "@nestjs/core": "^7.0.5",
+    "@nestjs/platform-express": "^7.0.5",
+    "reflect-metadata": "^0.1.13",
+    "rxjs": "^6.5.4"
+  },
   "devDependencies": {
+    "@types/express": "^4.17.3",
+    "@types/jasmine": "^3.5.10",
+    "@types/node": "^13.9.3",
     "@typescript-eslint/eslint-plugin": "^2.25.0",
     "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
-    "prettier": "^2.0.2"
+    "jasmine": "^3.5.0",
+    "nyc": "^15.0.0",
+    "prettier": "^2.0.2",
+    "rimraf": "^3.0.2",
+    "tsc-watch": "^4.2.3",
+    "typescript": "^3.8.3"
   }
 }
