--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "The API for project boondoggle",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "tsc-watch --onSuccess \"node ./dist/main.js\"",
+    "test": "tsc-watch --project test/tsconfig.json --onSuccess \"nyc jasmine\"",
+    "build": ""
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/sasha-arrabi/boondoggle-api.git"
   },
+  "private": true,
   "author": "",
   "license": "MIT",
   "bugs": {
@@ -31,11 +34,18 @@
     "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
+    "eslint-plugin-jasmine": "^4.1.0",
     "jasmine": "^3.5.0",
+    "jasmine-console-reporter": "^3.1.0",
     "nyc": "^15.0.0",
     "prettier": "^2.0.2",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.2.3",
     "typescript": "^3.8.3"
+  },
+  "nyc": {
+    "include": ["out-tsc/**/*.js"],
+    "report-dir": "./coverage",
+    "reporter": ["text", "lcov", "html"]
   }
 }
