--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "main.js",
   "scripts": {
     "start": "tsc-watch --onSuccess \"node ./dist/main.js\"",
-    "test": "tsc-watch --project test/tsconfig.json --onSuccess \"nyc jasmine\"",
+    "test:watch": "tsc-watch --project test/tsconfig.json --onSuccess \"nyc jasmine\"",
+    "test": "nyc jasmine",
+    "coverage": "nyc jasmine & node scripts/generateCoverageButton.js",
     "build": ""
   },
   "repository": {
@@ -38,14 +40,14 @@
     "jasmine": "^3.5.0",
     "jasmine-console-reporter": "^3.1.0",
     "nyc": "^15.0.0",
-    "prettier": "^2.0.2",
+  "prettier": "^2.0.2",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.2.3",
     "typescript": "^3.8.3"
   },
   "nyc": {
     "include": ["out-tsc/**/*.js"],
-    "report-dir": "./coverage",
-    "reporter": ["text", "lcov", "html"]
+    "report-dir": "./docs/coverage",
+    "reporter": ["text", "text-summary", "lcovonly", "html", "json-summary"]
   }
 }
