--- a/package.json
+++ b/package.json
@@ -23,26 +23,27 @@
   },
   "homepage": "https://github.com/sasha-arrabi/boondoggle-api#readme",
   "dependencies": {
-    "@nestjs/common": "^7.0.5",
-    "@nestjs/core": "^7.0.5",
-    "@nestjs/platform-express": "^7.0.5",
+    "@nestjs/common": "^7.0.7",
+    "@nestjs/core": "^7.0.7",
+    "@nestjs/platform-express": "^7.0.7",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.4"
+    "rxjs": "^6.5.5"
   },
   "devDependencies": {
-    "@types/express": "^4.17.3",
+    "@nestjs/testing": "^7.0.7",
+    "@types/express": "^4.17.4",
     "@types/jasmine": "^3.5.10",
-    "@types/node": "^13.9.3",
-    "@typescript-eslint/eslint-plugin": "^2.25.0",
-    "@typescript-eslint/parser": "^2.25.0",
+    "@types/node": "^13.11.0",
+    "@typescript-eslint/eslint-plugin": "^2.27.0",
+    "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.1",
     "eslint-plugin-jasmine": "^4.1.0",
     "jasmine": "^3.5.0",
     "jasmine-console-reporter": "^3.1.0",
     "lite-server": "^2.5.4",
-    "nyc": "^15.0.0",
-    "prettier": "^2.0.2",
+    "nyc": "^15.0.1",
+    "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
     "tsc-watch": "^4.2.3",
     "typescript": "^3.8.3"
