--- a/e2e/tsconfig.json
+++ b/e2e/tsconfig.json
@@ -10,6 +10,6 @@
   "include": [
     "../helpers/console-reporter.js",
     "../src/**/*.ts",
-    "src/**/*.spec.ts"
+    "src/**/*.e2e.ts"
   ]
 }
