--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "tsc-watch --onSuccess \"node ./dist/main.js\"",
     "test:watch": "tsc-watch --project test/tsconfig.json --onSuccess \"nyc jasmine JASMINE_CONFIG_PATH=jasmine.json\"",
-    "test": "tsc --project test/tsconfig.json && nyc jasmine JASMINE_CONFIG_PATH=jasmine.json",
+    "test": "tsc --project test/tsconfig.json && nyc jasmine --config=test/jasmine.json",
     "coverage": "npm test & node scripts/generateCoverageButton.js",
     "wiki": "lite-server",
+    "integration-test": "tsc --project e2e/tsconfig.json && jasmine --config=e2e/jasmine.json",
     "build": ""
   },
   "repository": {
@@ -34,6 +35,7 @@
     "@types/express": "^4.17.4",
     "@types/jasmine": "^3.5.10",
     "@types/node": "^13.11.0",
+    "@types/supertest": "^2.0.8",
     "@typescript-eslint/eslint-plugin": "^2.27.0",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
@@ -45,6 +47,7 @@
     "nyc": "^15.0.1",
     "prettier": "^2.0.4",
     "rimraf": "^3.0.2",
+    "supertest": "^4.0.2",
     "tsc-watch": "^4.2.3",
     "typescript": "^3.8.3"
   },
@@ -52,11 +55,11 @@
     "all": true,
     "exclude-after-remap": false,
     "include": [
-      "out-tsc/src/**/*.js"
+      "test/out-tsc/src/**/*.js"
     ],
     "exclude": [
-      "out-tsc/test/**/*.js",
-      "out-tsc/src/main.js"
+      "test/out-tsc/test/**/*.js",
+      "test/out-tsc/src/main.js"
     ],
     "report-dir": "./docs/coverage",
     "reporter": [
