--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,4 +3,22 @@
   "editor.codeActionsOnSave": {
     "source.fixAll": true
   },
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/dist": true,
+    "**/out-tsc": true,
+    "**/docs": true
+  },
+  "files.watcherExclude": {
+    "**/.git/objects/**": true,
+    "**/.git/subtree-cache/**": true,
+    "**/node_modules/*/**": true,
+    "**/dist/*/**": true,
+    "**/out-tsc/*/**": true,
+    "**/docs/*/**": true
+  }
 }
