--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@nestjs/common": "^7.0.7",
     "@nestjs/core": "^7.0.7",
     "@nestjs/platform-express": "^7.0.7",
+    "dotenv": "^8.2.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5"
   },
