--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,8 @@
 
 # compiled output
 /dist
-/out-tsc
+/test/out-tsc
+/e2e/out-tsc
 /.nyc_output
 
 # dependencies
@@ -33,6 +34,7 @@ npm-debug.log
 yarn-error.log
 testem.log
 /typings
+.env
 
 # System Files
 .DS_Store
