--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "description": "The API for project boondoggle",
   "main": "main.js",
   "scripts": {
-    "start": "tsc-watch --onSuccess \"node ./dist/main.js\"",
+    "start": "tsc-watch --onSuccess \"node --inspect ./dist/main.js\"",
     "test:watch": "tsc-watch --project test/tsconfig.json --onSuccess \"nyc jasmine JASMINE_CONFIG_PATH=jasmine.json\"",
     "test": "tsc --project test/tsconfig.json && nyc jasmine --config=test/jasmine.json",
     "coverage": "npm test & node scripts/generateCoverageButton.js",
     "wiki": "lite-server",
     "integration-test": "tsc --project e2e/tsconfig.json && jasmine --config=e2e/jasmine.json",
-    "build": ""
+    "build": "tsc --sourceMap false"
   },
   "repository": {
     "type": "git",
