--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
     "outDir": "./dist",
     "resolveJsonModule": true,
     "strict": true,
-    "target": "ES2019"
+    "target": "ES2019",
+    "sourceMap": true
   },
   "files": [
     "src/main.ts"
